# apsis

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  LICENSE  README.md  RELEASE.md  config.json  crontab  developing.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
conda-recipe/: meta.yaml
docs/: Makefile  concepts.rst  conditions.rst  conf.py  config.md  config.rst  configuring-jobs.rst  extending.rst  implementation.md  index.rst  jobs.rst  monitoring.rst  programs.rst  rest-api.md  runs-filter.md  schedules.rst
jobs/: .gitignore  bigscript.yaml  check every hour.yaml  check every minute.yaml  close day.yaml  close_day.sh  dep1.yaml  dep2.yaml  fail.yaml  fruit check.yaml  open day.yaml  open_day.sh  ping check.yaml  print env.yaml  remote command.yaml  reruntest.yaml  serial.yaml  sleep exit.yaml  sleep.yaml  test-job-0.json  test0  test0.yaml  test1.yaml  test2.yaml  user command.yaml
notes/: actions.md  agent.md  api.md  clui.md  concepts.md  features.md  format.txt  names.md  notes.md  notes.org  plan.md  prior-art.md  program1.json  redis.md  roadmap.md  ssl.md  to do.org  todo.md
python/: extension.py  honcho.py
scripts/: gen-jobs.py  graph-dependencies.py  migrate-db.py
src/: .gitignore  Doxyfile  Makefile  action.cc  action.hh  doxygen-header.html  doxygen.sty  event.cc  event.hh  exc.hh  fd_handler.cc  header.tex  proc.hh  program.cc
static/: log.html
test/: .gitignore  Makefile  test_agent_program.py  test_agent_remote.py  test_agent_start.py  test_asyn.py  test_cond.py  test_host_group.py  test_memo.py  test_output_db.py  test_pidfile.py  test_schedule.py  test_setup.sh
tools/: convert-ics-holidays.py  py
vue/: .eslintrc.js  README.md  index.html  package-lock.json  package.json
web/: index.css  index.html  index.js
work/: .gitignore  Makefile  (+29 more)
(+617 files in other folders)
